--- a/config/water_leak_detection.yaml
+++ b/config/water_leak_detection.yaml
@@ -3,20 +3,28 @@ DATA:
 
 METHOD:
   IMAGE_SHAPE: [3,608,608] # C-H-W
-  DETECTION_POS: [100,100,900,800] # x_min, y_min, x_max, y_max.
-  FLOW_METHOD: "LK"
-  TERM_CRITERIA_MAX_COUNT: 10
-  TERM_CRITERIA_EPSILON: 0.03
-  MAX_CORNERS: 100
-  QUALITY_LEVEL: 0.3
-  MIN_DIST: 7
-  BLOCK_SIZE: 7
-  USE_HARRIS_DETECTOR: False
-  SIFT_K: 0.04
-  PLK_MAX_LEVEL: 2
+  DETECTION_POS: [100,150,1500,1000] # x_min, y_min, x_max, y_max.
+  FLOW_METHOD: 1 # denotes the farneBack method. 0 for LK.
+  LK_TERM_CRITERIA_MAX_COUNT: 10
+  LK_TERM_CRITERIA_EPSILON: 0.03
+  LK_MAX_CORNERS: 100
+  LK_QUALITY_LEVEL: 0.3
+  LK_MIN_DIST: 7
+  LK_BLOCK_SIZE: 7
+  LK_USE_HARRIS_DETECTOR: False
+  LK_SIFT_K: 0.04
+  LK_PLK_MAX_LEVEL: 2
+  FB_PYR_SACLE: 0.5
+  FB_LEVELS: 3
+  FB_WINSIZE: 15
+  FB_ITERATIONS: 3
+  FB_POLY_N: 5
+  FB_POLYSIGMA: 1.2
+  FB_FLAGS: 0
   THRESHOLD_LEN: 2
-  THRESHOLD: 0.3
-  RESET_COUNT: 20
+  THRESHOLD: 125.0
+  THRESHOLD_UPPER: 160.0
+  RESET_COUNT: 100
   ENABLE_MOVING_AVERAGE: True
   MOVING_LEN: 10
   USE_GPU: True
