--- a/config/water_leak_detection.yaml
+++ b/config/water_leak_detection.yaml
@@ -24,20 +24,22 @@ METHOD:
   THRESHOLD_LEN: 2
   THRESHOLD: 0.9
   THRESHOLD_UPPER: 160.0
-  RESET_COUNT: 100
+  RESET_COUNT: 10
+  ALARM_COUNT: 20
   ENABLE_MOVING_AVERAGE: True
   MOVING_LEN: 10
   USE_GPU: True
 
 
 POST_PROCESS:
-  POST_TEXT: "Water Leak Warning"
+  POST_TEXT: "漏水预警"
   DRAW_LINE_WIDTH: 2
   DRAW_PLOT_RADIUS: 5
-  DRAW_LINE_COLOR: [255,0,0]
+  DRAW_LINE_COLOR: [0,0,255]
   DRAW_LINE_COLOR_THRES: [0,0,255]
   TEXT_LINE_WIDTH: 2.6
-  TEXT_FONT_SIZE: 2.0
+  TEXT_FONT_SIZE: 35.0
   TEXT_LINE_COLOR: [255,0,0]
   TEXT_OFFSET_X: 800
-  TEXT_OFFSET_Y: 50
+  TEXT_OFFSET_Y: 20
+  FONT_SRC: "/home/gpu/Downloads/simsun.ttc"
